--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,8 @@
 name: Publish
 on:
-  schedule:
-  - cron: '0 0 * * *'
+  push:
+    branches:
+    - master
 jobs:
   publish:
     name: "Packages"
