--- a/package.json
+++ b/package.json
@@ -8,9 +8,32 @@
     "assemblyscript",
     "wasm"
   ],
-  "version": "0.0.0",
+  "version": "0.10.2",
   "author": "Daniel Wirtz <dcode+assemblyscript@dcode.io>",
-  "contributors": [],
+  "contributors": [
+    "Max Graey <maxgraey@gmail.com>",
+    "Igor Sbitnev <PinkaminaDianePie@gmail.com>",
+    "Norton Wang <me@nortonwang.com>",
+    "Alan Pierce <alangpierce@gmail.com>",
+    "Palmer <pengliao@live.cn>",
+    "Linus Unnebäck <linus@folkdatorn.se>",
+    "Joshua Tenner <tenner.joshua@gmail.com>",
+    "Nidin Vinayakan <01@01alchemist.com>",
+    "Aaron Turner <aaron@aaronthedev.com>",
+    "Willem Wyndham <willem@cs.umd.edu>",
+    "Bowen Wang <bowen@nearprotocol.com>",
+    "Emil Laine <laine.emil@gmail.com>",
+    "Stephen Paul Weber <stephen.weber@shopify.com>",
+    "Jay Phelps <hello@jayphelps.com>",
+    "jhwgh1968 <jhwgh1968@protonmail.com>",
+    "Jeffrey Charles <jeffreycharles@gmail.com>",
+    "Vladimir Tikhonov <reg@tikhonov.by>",
+    "Duncan Uszkay <duncan.uszkay@shopify.com>",
+    "Surma <surma@surma.dev>",
+    "Julien Letellier <letellier.julien@gmail.com>",
+    "Guido Zuidhof <me@guido.io>",
+    "ncave <777696+ncave@users.noreply.github.com>"
+  ],
   "license": "Apache-2.0",
   "homepage": "https://assemblyscript.org",
   "repository": {
@@ -22,26 +45,7 @@
   },
   "dependencies": {
     "binaryen": "93.0.0-nightly.20200609",
-    "long": "^4.0.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^6.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "browser-process-hrtime": "^1.0.0",
-    "diff": "^4.0.2",
-    "eslint": "^7.2.0",
-    "glob": "^7.1.6",
-    "physical-cpu-count": "^2.0.0",
-    "semantic-release": "github:dcodeIO/semantic-release",
-    "source-map-support": "^0.5.19",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^6.2.0",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "long": "^4.0.0"
   },
   "main": "index.js",
   "types": "index.d.ts",
@@ -49,33 +53,11 @@
     "asc": "bin/asc",
     "asinit": "bin/asinit"
   },
-  "scripts": {
-    "build": "npm run build:bundle && npm run build:dts",
-    "build:bundle": "webpack --mode production --display-modules",
-    "build:dts": "node scripts/build-dts && tsc --noEmit --target ESNEXT --module commonjs --experimentalDecorators tests/require/index-release",
-    "build:sdk": "node scripts/build-sdk",
-    "clean": "node scripts/clean",
-    "check": "npm run check:config && npm run check:require && npm run check:lint",
-    "check:config": "tsc --noEmit -p src --diagnostics --listFiles",
-    "check:require": "tsc --noEmit --target ESNEXT --module commonjs --experimentalDecorators tests/require/index",
-    "check:lint": "eslint --max-warnings 0 --ext js . && eslint --max-warnings 0 --ext ts .",
-    "test": "npm run test:parser && npm run test:compiler && npm run test:packages && npm run test:extension",
-    "test:parser": "node tests/parser",
-    "test:compiler": "node tests/compiler",
-    "test:packages": "cd tests/packages && npm run test",
-    "test:extension": "cd tests/extension && npm run test",
-    "make": "npm run clean && npm test && npm run build && npm test",
-    "all": "npm run check && npm run make",
-    "docs": "typedoc --tsconfig tsconfig-docs.json --mode modules --name \"AssemblyScript Compiler API\" --out ./docs/api --ignoreCompilerErrors --excludeNotExported --excludePrivate --excludeExternals --exclude **/std/** --includeDeclarations --readme src/README.md",
-    "postversion": "node scripts/postversion && npm run build:sdk",
-    "prepublishOnly": "node scripts/prepublish",
-    "postpublish": "node scripts/postpublish",
-    "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
-    "asbuild:untouched": "node bin/asc src/glue/wasm/index.ts src/index.ts -t out/assemblyscript.untouched.wat -b out/assemblyscript.untouched.wasm -d out/assemblyscript.d.ts --debug --measure --runtime stub",
-    "asbuild:optimized": "node bin/asc src/glue/wasm/index.ts src/index.ts -t out/assemblyscript.optimized.wat -b out/assemblyscript.optimized.wasm -O3 --measure --runtime stub",
-    "astest": "ts-node tests/bootstrap"
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/assemblyscript"
   },
-  "releaseFiles": [
+  "files": [
     "lib/rtrace/index.d.ts",
     "lib/rtrace/index.js",
     "lib/rtrace/README.md",
@@ -95,9 +77,5 @@
     "README.md",
     "std/",
     "tsconfig-base.json"
-  ],
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/assemblyscript"
-  }
+  ]
 }
