--- a/package.json
+++ b/package.json
@@ -45,7 +45,26 @@
   },
   "dependencies": {
     "binaryen": "93.0.0-nightly.20200609",
-    "long": "^4.0.0"
+    "long": "^4.0.0",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^6.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "browser-process-hrtime": "^1.0.0",
+    "diff": "^4.0.2",
+    "eslint": "^7.2.0",
+    "glob": "^7.1.6",
+    "physical-cpu-count": "^2.0.0",
+    "semantic-release": "github:dcodeIO/semantic-release",
+    "source-map-support": "^0.5.19",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^6.2.0",
+    "typescript": "^3.9.5",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "main": "index.js",
   "types": "index.d.ts",
